the network monitor window is opened as a popup right over the mouse pointer, and is shown and hidden using the fade effect; extracted strings to the localization files

--- a/bigbluebutton-client/locale/en_US/bbbResources.properties
+++ b/bigbluebutton-client/locale/en_US/bbbResources.properties
@@ -246,3 +246,12 @@ bbb.shortcutkey.chat.chatbox.gofirst = control+shift+32
 bbb.shortcutkey.chat.chatbox.gofirst.function = Go to first message
 bbb.shortcutkey.chat.chatbox.goread = control+shift+82
 bbb.shortcutkey.chat.chatbox.goread.function = Go to the most recent message you have read
+bbb.bwmonitor.title = Network monitor
+bbb.bwmonitor.upload = Upload
+bbb.bwmonitor.upload.short = Up
+bbb.bwmonitor.download = Download
+bbb.bwmonitor.download.short = Down
+bbb.bwmonitor.total = Total
+bbb.bwmonitor.current = Current
+bbb.bwmonitor.available = Available
+bbb.bwmonitor.latency = Latency
